--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   padding: 0;
 }
 
+
 html {
   font-size: 62.5%;
 }
@@ -19,9 +20,7 @@ body {
   color: #ff0000 !important;
 }
 
-.active {
-  color: #ff0000 !important;
-}
+
 
 .hero-shadow {
   position: absolute;
@@ -29,7 +28,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+/*   background-color: rgba(0, 0, 0, 0.6); */
   z-index: -1;
 }
 
@@ -64,6 +63,8 @@ nav {
   font-weight: bold;
   text-transform: none;
 }
+
+
 
 /* header */
 
@@ -228,10 +229,21 @@ footer {
 
 /* kontakt */
 
+.contact-box {
+  height: 100%;
+}
+
+.form-box {
+  height: 100%;
+  border: 1px solid green;
+}
+
 .contact-hero {
   background-image: url("../img/contact/contact-hero.jpg");
   background-position: 0 40%;
 }
+
+
 
 .contact h2 {
   text-transform: uppercase;
@@ -264,9 +276,9 @@ footer {
     padding: 0;
   }
 
-  .aboutus-shadow {
+ .aboutus-shadow {
     box-shadow: inset 0 5px 10px -5px rgba(0, 0, 0, 0.4);
-  }
+  } 
 
   .aboutus-text {
     padding: 5em 0;
@@ -304,6 +316,10 @@ footer {
     background-image: url("../img/main-carousel-3-hq.jpg");
   }
 }
+
+/* @media (max-width: px) {
+  
+} */
 
 .btn-primary {
   color: #fff;
@@ -345,4 +361,8 @@ form button {
   padding-bottom: 1rem !important;
   padding-left: 2rem !important;
   padding-right: 2rem !important;
+}
+
+[id] {
+  scroll-margin-top: 54px;
 }
